--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,10 @@
-MONGODB_URI=TU_URI_DE_ATLAS_AQUI
+# MongoDB Connection
+# Reemplaza <usuario>, <contraseña>, <cluster> y <bdname> con tus credenciales reales
+MONGODB_URI=mongodb+srv://<usuario>:<contraseña>@<cluster>.mongodb.net/<bdname>?retryWrites=true&w=majority
+
+# Puerto del servidor
 PORT=5000
-JWT_SECRET=
+
+# JWT Secret Key - Usa una cadena segura y única en producción
+JWT_SECRET=tu_clave_secreta_super_segura_aqui
 
