--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,6 @@
-# MongoDB Connection
-# Reemplaza <usuario>, <contraseña>, <cluster> y <bdname> con tus credenciales reales
-MONGODB_URI=mongodb+srv://<usuario>:<contraseña>@<cluster>.mongodb.net/<bdname>?retryWrites=true&w=majority
 
-# Puerto del servidor
+MONGODB_URI=mongodb+srv://matiascastells_db_user:i8jHBsI912RoeqDB@cluster-crud-mongodb.hlnn1we.mongodb.net/proyectoCrud?retryWrites=true&w=majority
 PORT=5000
-
 # JWT Secret Key - Usa una cadena segura y única en producción
 JWT_SECRET=tu_clave_secreta_super_segura_aqui
 
