--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 
-MONGODB_URI=mongodb+srv://matiascastells_db_user:i8jHBsI912RoeqDB@cluster-crud-mongodb.hlnn1we.mongodb.net/proyectoCrud?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://<usuario>:<contraseña>@<cluster>/<baseDatos>?retryWrites=true&w=majority
 PORT=5000
 # JWT Secret Key - Usa una cadena segura y única en producción
 JWT_SECRET=tu_clave_secreta_super_segura_aqui
