--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,12 @@
 
+# MongoDB en la nube
 MONGODB_URI=mongodb+srv://<usuario>:<contraseña>@<cluster>/<baseDatos>?retryWrites=true&w=majority
+# MongoDB local
+MONGODB_LOCAL_URI=mongodb://localhost:27017/proyectocrud
+
+# Puerto del servidor
 PORT=5000
+
 # JWT Secret Key - Usa una cadena segura y única en producción
 JWT_SECRET=tu_clave_secreta_super_segura_aqui
 
